--- a/Actividades en clase/Actividad-CleanCoding-18-06/index.html
+++ b/Actividades en clase/Actividad-CleanCoding-18-06/index.html
@@ -1,30 +1,30 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="es">
-<head>
-  <meta charset="UTF-8">
-  <title>Conversor de Moneda</title>
-</head>
-<body>
-<h1>Conversor de Moneda</h1>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Conversor de Moneda</title>
+  </head>
+  <body>
+    <h1>Conversor de Moneda</h1>
 
-<form id="formulario">
-  <input type="number" name="cantidad" placeholder="Cantidad" required />
-  <select name="origen">
-    <option value="USD">USD</option>
-    <option value="EUR">EUR</option>
-    <option value="GBP">GBP</option>
-  </select>
-  a
-  <select name="destino">
-    <option value="USD">USD</option>
-    <option value="EUR">EUR</option>
-    <option value="GBP">GBP</option>
-  </select>
-  <button type="submit">Convertir</button>
-</form>
+    <form id="formulario">
+      <input type="number" name="cantidad" placeholder="Cantidad" required />
+      <select name="origen">
+        <option value="USD">USD</option>
+        <option value="EUR">EUR</option>
+        <option value="GBP">GBP</option>
+      </select>
+      a
+      <select name="destino">
+        <option value="USD">USD</option>
+        <option value="EUR">EUR</option>
+        <option value="GBP">GBP</option>
+      </select>
+      <button type="submit">Convertir</button>
+    </form>
 
-<p id="resultado" style="color: black"></p>
+    <p id="resultado" style="color: black"></p>
 
-<script type="module" src="./src/index.js"></script>
-</body>
+    <script type="module" src="./src/index.js"></script>
+  </body>
 </html>
